--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 /* Ini File CSS */
 
-/*Import Google Font - Poppins */
+/* Import Google Font - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
 *{
@@ -288,8 +288,45 @@ button.calculate:hover {
 }
 
 
+/* INFORMATION, KELEBIHAN & DISCLAIMER! */
+.information {
+    background: #f0f8ff8c;
+    box-shadow: 0px 0px 95px -30px black;
+    border-radius: 15px;
+    border: 2px solid #f0f8ffab;
+    margin: 20px;
+    padding: 15px;
+    text-align: left;
+}
 
+.kelebihan {
+    background: #f0f8ff8c;
+    box-shadow: 0px 0px 95px -30px black;
+    border-radius: 15px;
+    border: 2px solid #f0f8ffab;
+    margin: 20px;
+    padding: 15px 15px 15px 15px;
+}
+h3{
+  color: #18a2f7;  
+}
+ul {
+    margin: 20px;
+    align-items: center;
+}
 
+.disclaimer {
+    background: #f0808057;
+    box-shadow: 0px 0px 95px -30px black;
+    border-radius: 15px;
+    border: 2px solid #d6444470;
+    margin: 20px;
+    padding: 15px;
+    text-align: left;
+}
+.h-disclaimer {
+    color: #d64444;
+}
 
 /* The Modal Background */
 .modal {
