--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,6 +14,7 @@ body {
     min-height: 100vh;
     background: lightskyblue;
     margin: 20px;
+    padding: 15px;
 }
 
 h1 {
@@ -299,6 +300,7 @@ button.calculate:hover {
     text-align: left;
 }
 
+
 .kelebihan {
     background: #f0f8ff8c;
     box-shadow: 0px 0px 95px -30px black;
@@ -327,6 +329,8 @@ ul {
 .h-disclaimer {
     color: #d64444;
 }
+
+
 
 /* The Modal Background */
 .modal {
